--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js",
-    "test": "node_modules\\.bin\\mocha --reporter spec **/*.test.js"
+    "test": "mocha \"./{,!(node_modules)/**/}*.test.js\""
   },
   "author": "",
   "license": "ISC",
