--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.23.0",
-    "sequelize-cli": "^6.4.1"
+    "sequelize-cli": "^6.4.1",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "chai": "^4.3.6",
