--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "jwt": "^0.2.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.23.0",
     "sequelize-cli": "^6.4.1",
