--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "joi": "^17.6.3",
     "jwt": "^0.2.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.23.0",
